--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<h2>(Hi, Julie!)</h2>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Why, hello there!</h1>
+<h2>I'm David Nyer, and this is a website.</h2>
+<p>I'll put some interesting stuff here eventually.</p>
 </body>
 </html>
