--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+<head>
+	<link rel="stylesheet" href="https://latex.vercel.app/style.css">
+</head>
+<body class="latex-dark-auto">
 <h1>Why, hello there!</h1>
 <h2>I'm David Nyer, and this is a website.</h2>
 <p>I'll put some interesting stuff here eventually.</p>
