--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 									<p>I was expecting the process of making a website to be a lot more painful, to be honest. Domain registration, site hosting, slapping together enough HTML to make it readable - the whole process took maybe five hours. Yet another example of the size of the problem being much larger in my head than in reality I suppose.</p>
 
-									<p>So what will I be using this site for? Writing about whatever strikes my fancy, of course! I'd like to use it as a journal/notebook of sorts, recording my process of gaining knowledge, learning skills, and generally experiencing new or interesting things. Some topics I'm interested in include bicycling, programming, biotechnology, cooking, and hiking/camping. So, pretty much what you'd expect from a guy who sets up his own website. I'd like to update this site at least weekly, and ideally more often, once I have the rest of the site sorted out. Pending my time, energy, and attention, of course.</p>
+									<p>So what will I be using this site for? Writing about whatever strikes my fancy, of course! I'd like to use it as a journal/notebook of sorts, recording my process of gaining knowledge, learning skills, and generally experiencing new or interesting things. Some topics I'm interested in include bicycling, programming, biotechnology, cooking, woodworking, and hiking/camping. So, pretty much what you'd expect from a guy who sets up his own website. I'd like to update this site at least weekly, and ideally more often, once I have the rest of the site sorted out. Pending my time, energy, and attention, of course.</p>
 
 									<p>See you around, hopefully.<br>DBN</p>
 									<!-- <ul class="actions special">
