--- a/index.html
+++ b/index.html
@@ -68,10 +68,47 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">May 08, 2025</span>
+										<h2><a href="">Love's labors lost and found</a></h2>
+									</header>
+
+									<p>Something cute I found this afternoon while digging through a luggage chest I bought at an estate sale - what appears to be a love letter, or perhaps the draft of one, or the beginning of a wedding vow, with accompanying doodle of the presumed beloved (or lover?).
+
+									<img src="images/PXL_20250508_200701468.jpg" alt="The front of a 8&quot; x 5&quot; index card with a doodle of a person, with the accompanying text &quot;my curly burly love&quot; and &quot;gezundheit&quot;" title="The front of a 8&quot; x 5&quot; index card with a doodle of a person, with the accompanying text &quot;my curly burly love&quot; and &quot;gezundheit&quot;" width=100%>
+
+									<p>There's no date anywhere, but I'm guessing late 80s or early 90s based on other documents I found in the chest.</p>
+
+									<img src="images/PXL_20250508_200713051.jpg" alt="The back of a 8&quot; x 5&quot; index card with cursive text, transcription in the article below." title="The back of a 8&quot; x 5&quot; index card with cursive text, transcription in the article below." width=100%>
+
+									<p>The text, as best I can tell:<br></p>
+									<p>my love            my love with the burly curly <s>crop ha</s><br>
+										    earl you            earl<br>
+										        my husband how i believe in our union<br>
+										                        <s>our love feels like it will be g</s><br>
+										                        <s>our love</s><br>
+										            the sense of you + i<br><br>
+										            there is true in 'you + i'<br>
+										              <u>sense in being together</u><br>
+										            the only <s>right</s> sense i see for me<br>
+										            is <s>to</s> always to be together with thee.<br>
+										Treasures                <s>feeling</s>    <s>sensing the adventures</s> <u>touching</u> , tasting , testing<br>
+										together, touching tasting testing            a world of <s>adventure</s> good days<br>
+										    my love ,                <br>is ours
+										    <s>our days will be</s>good days we'll see.</p>
+									<p>I'm glad I found this little expression of love, tucked away, likely long forgotten, frozen in time. I hope their lives were as wonderful as they wanted them to be.<br>DBN</p>
+
+
+
+									<!-- <ul class="actions special">
+										<li><a href="" class="button">Read More</a></li> -->
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">May 07, 2025</span>
 										<h2><a href="">Hello, world</a></h2>
 									</header>
-									<img src="images/PXL_20221016_175145295.jpg" alt="Monadnock State Park, Jaffrey, NH. 16 Oct 2022" width=100%>
+									<img src="images/PXL_20221016_175145295.jpg" alt="Monadnock State Park, Jaffrey, NH. 16 Oct 2022" title="Monadnock State Park, Jaffrey, NH. 16 Oct 2022" width=100%>
 
 									<p>Okay. Let's take it from the top, one more time.</p>
 									
